# inveniq_backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
.nginx/: nginx.conf
accounts/: admin.py  apps.py  authentication.py  models.py  permissions.py  serializers.py  signals.py  tests.py  views.py
accounts/management/commands/: create_user.py
accounts/migrations/: 0001_initial.py  0002_user_avatar_user_bio_user_phone_number_user_role.py
alerts/: models.py  serializers.py  urls.py  views.py
alerts/migrations/: 0001_initial.py  0002_alert_branch.py
common/management/commands/: dev.py
config/: asgi.py  settings.py  urls.py  wsgi.py
inventory/: admin.py  analytics_views.py  apps.py  models.py  models_ai.py  serializers.py  signals.py  tasks.py  urls.py  views.py
inventory/management/commands/: run_dev.py  run_mcp.py
inventory/migrations/: 0001_initial.py  0002_aiinsight.py  0003_branch_code_branch_manager.py  0004_stockprediction.py  0005_stockentry.py  0006_product_cost_price_product_primary_supplier.py  0007_purchaseorder_purchaseorderitem.py  0008_stockaudit_stockaudititem.py  0009_remove_stockaudititem_audit_and_more.py
inventory/templates/emails/: debt_reminder.html  manager_alert.html  po_received.html  po_sent.html
mcp/: server.py
notifications/: consumers.py  sms.py
sales/: analytics_views.py  category_analytics.py  models.py  serializers.py  tests.py  urls.py  views.py
sales/migrations/: 0001_initial.py  0002_sale_customer.py  0003_sale_payment_method.py  0004_sale_due_date_sale_is_paid_sale_paid_amount.py  0005_populate_existing_sales_paid.py
stakeholders/: apps.py  models.py  serializers.py  urls.py  views.py
stakeholders/migrations/: 0001_initial.py  0002_add_payment_model.py
templates/inventory/: supplier_order_history.html
templates/registration/: password_reset_email.html  password_reset_email.txt
tests/: .gitkeep
