[project]
dependencies = [
    "django>=5.2.7",
    "python-decouple>=3.8",
    "whitenoise>=6.6.0",
    "psycopg2-binary>=2.9.9",
    "dj-database-url>=3.0.1",
    "daphne>=4.2.1",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.3.0",
    "dj-rest-auth>=7.0.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-yasg>=1.21.8",
    "django-model-utils>=5.0.0",
    "django-guardian>=3.2.0",
    "huey>=2.5.0",
    "python-dotenv>=1.2.1",
]
name = "inveniq_backend"
version = "0.1.0"
description = "A Django project built with modern best practices"
readme = "README.md"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "bandit[toml]>=1.7.0",
    "pre-commit>=3.6.0",
    "ipython>=8.20.0",
    "ipdb>=0.13.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-django>=4.7.0",
    "pytest-cov>=4.1.0",
    "factory-boy>=3.3.0",
    "faker>=22.0.0",
]

[tool.setuptools]
packages = ["config", "accounts"]

[tool.ruff]
target-version = "py312"
line-length = 88
fix = true
exclude = [".git", ".venv", "__pycache__", ".pytest_cache", "migrations"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # warnings
    "B",   # bugbear
    "C4",  # comprehensions
    "SIM", # simplify
    "DJ",  # django
    "UP",  # pyupgrade
    "I",   # import sorting (isort replacement)
]
ignore = [
    "E203", # formatter compatibility
]

[tool.ruff.lint.isort]
known-first-party = ["config"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.bandit]
exclude_dirs = [".venv", "migrations", "tests", "*/test_*.py"]
skips = ["B308", "B703"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["."]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml:htmlcov/coverage.xml",
]
markers = [
    "slow: marks tests as slow",
    "integration: integration tests",
    "unit: unit tests",
]

[tool.coverage.run]
source = ["."]
data_file = ".coverage_data/.coverage"
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "manage.py",
    "*/asgi.py",
    "*/wsgi.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
